--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,26 @@
 agp = "8.7.3"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
+
+firebaseBom = "33.8.0"
+firebaseAuth="23.1.0"
+ksp = "2.0.10-1.0.24"
+roomVersion = "2.6.1"
+googleServices = "4.4.2"
+
+minSdk = "26"
+compileSdk = "35"
+targetSdk = "34"
+
+ktx = "1.13.1"
+appcompatVersion = "1.7.0"
+materialVersion = "1.12.0"
+kotlinx-coroutines-android = "1.7.3"
+
+navVersion = "2.8.6"
+hilt = "2.50"
+datastorePreferences = "1.1.2"
+
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -10,13 +30,47 @@ material = "1.12.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+
+google-services = { module = "com.google.gms:google-services", version.ref = "googleServices" }
+
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-auth = { module = "com.google.firebase:firebase-auth", version.ref = "firebaseAuth" }
+
+androidx-navigation-fragment = { module = "androidx.navigation:navigation-fragment", version.ref = "navVersion" }
+androidx-navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navVersion" }
+androidx-navigation-safeArgs = { module = "androidx.navigation:navigation-safe-args-gradle-plugin", version.ref = "navVersion" }
+
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+ksp-hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+
+androidx-room = { module = "androidx.room:room-runtime", version.ref = "roomVersion" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
+androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomVersion" }
+ksp-room = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
+
+datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+
+kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android" }
+
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+androidx-safeArgs = { id = 'androidx.navigation.safeargs.kotlin', version.ref = "navVersion" }
+
+androidx-room = { id = "androidx.room", version.ref = "roomVersion" }
+
+parcelize={ id="org.jetbrains.kotlin.plugin.parcelize",version.ref="kotlin"}
+
+google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+google-dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+
+com-google-gms = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 
