--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.redrive'
-    compileSdk 35
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.redrive"
@@ -37,7 +37,12 @@ dependencies {
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
     implementation libs.material
+
+    implementation libs.androidx.navigation.fragment
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
+
+
 }
