--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,34 +1,16 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+
+    alias(libs.plugins.google.dagger.hilt)
+
+    alias(libs.plugins.google.devtools.ksp)
+    alias(libs.plugins.com.google.gms)
 }
-
+apply from: "$rootDir/core.gradle"
 android {
-    namespace 'com.example.redrive'
-    compileSdk 34
-
-    defaultConfig {
-        applicationId "com.example.redrive"
-        minSdk 28
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-    }
-    kotlinOptions {
-        jvmTarget = '11'
+    buildFeatures {
+        viewBinding true
     }
 }
 
@@ -39,6 +21,15 @@ dependencies {
     implementation libs.material
 
     implementation libs.androidx.navigation.fragment
+
+    //Hilt
+    implementation libs.hilt.android
+    ksp libs.ksp.hilt.compiler
+
+    //Firebase
+    implementation platform(libs.firebase.bom)
+    implementation libs.firebase.auth
+
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
