--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    dependencies {
+        classpath libs.google.services
+    }
+}
+
 plugins {
     alias(libs.plugins.android.application) apply false
     alias(libs.plugins.kotlin.android) apply false
+    alias libs.plugins.android.library apply false
+
+    alias(libs.plugins.google.devtools.ksp) apply false
+    alias(libs.plugins.google.dagger.hilt) apply false
+    alias(libs.plugins.com.google.gms) apply false
+    alias(libs.plugins.androidx.room) apply false
 }
