--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation libs.material
 
     implementation libs.androidx.navigation.fragment
+    implementation libs.androidx.navigation.ui
 
     //Hilt
     implementation libs.hilt.android
