--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ plugins {
     alias(libs.plugins.google.dagger.hilt) apply false
     alias(libs.plugins.com.google.gms) apply false
     alias(libs.plugins.androidx.room) apply false
+    alias(libs.plugins.jetbrains.kotlin.jvm) apply false
 }
