(data): Implemented email SignIn feature and initialized Firebase integration

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,16 @@ plugins {
 }
 apply from: "$rootDir/core.gradle"
 android {
+    defaultConfig{
+        applicationId "com.example.redrive"
+    }
     buildFeatures {
         viewBinding true
     }
 }
 
 dependencies {
+    implementation project(path:':data')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
