--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 
 dependencies {
     implementation project(path:':data')
+    implementation project(path:':domain')
 
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
