WIP:Add Room and DataStore modules. Implement AppDatabase with UsersDao. Refactor Firebase into a separate module

--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,5 @@ rootProject.name = "ReDrive"
 include ':app'
 include ':domain'
 include ':data'
+include ':data:localeDataSource'
+include ':data:firebase'
