--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,11 @@ dependencies {
 
     //Hilt
     implementation libs.hilt.android
+
     ksp libs.ksp.hilt.compiler
 
     //Firebase
-    implementation platform(libs.firebase.bom)
-    implementation libs.firebase.auth
-
+    implementation libs.firebase.common.ktx
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
