--- a/data/firebase/build.gradle
+++ b/data/firebase/build.gradle
@@ -1,29 +1,26 @@
 plugins {
-    alias(libs.plugins.kotlin.android)
     alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
     alias(libs.plugins.google.devtools.ksp)
     alias(libs.plugins.google.dagger.hilt)
-
 }
-
 apply from: "$rootDir/core.gradle"
 android {
-    namespace 'com.example.data'
+    namespace 'com.example.firebase'
 }
 
 dependencies {
-    implementation project(path: ':domain')
-    implementation project(path:':data:localeDataSource')
-    implementation project(path:':data:firebase')
+
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
-
-    implementation libs.kotlinx.coroutines
+    //Firebase
+    implementation platform(libs.firebase.bom)
+    api libs.play.services.basement
+    api libs.firebase.auth.ktx
 
     //Dagger_Hilt
     implementation libs.hilt.android
     ksp libs.ksp.hilt.compiler
-
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
