--- a/data/localeDataSource/build.gradle
+++ b/data/localeDataSource/build.gradle
@@ -1,29 +1,38 @@
 plugins {
-    alias(libs.plugins.kotlin.android)
     alias(libs.plugins.android.library)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.androidx.room)
     alias(libs.plugins.google.devtools.ksp)
     alias(libs.plugins.google.dagger.hilt)
-
 }
 
 apply from: "$rootDir/core.gradle"
 android {
-    namespace 'com.example.data'
+    namespace 'com.example.localedatasource'
+    room {
+        schemaDirectory "$projectDir/schemas"
+    }
 }
 
 dependencies {
-    implementation project(path: ':domain')
-    implementation project(path:':data:localeDataSource')
-    implementation project(path:':data:firebase')
+
     implementation libs.androidx.core.ktx
     implementation libs.androidx.appcompat
-
-    implementation libs.kotlinx.coroutines
 
     //Dagger_Hilt
     implementation libs.hilt.android
     ksp libs.ksp.hilt.compiler
 
+    //DataStore
+    implementation libs.datastore.preferences
+
+    //Room
+    implementation libs.androidx.room
+    implementation libs.androidx.room.ktx
+    implementation libs.androidx.room.paging
+    ksp libs.ksp.room
+
+    implementation libs.gson
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
