--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -17,6 +17,8 @@ kotlin {
 }
 
 dependencies {
+
+    implementation libs.kotlinx.coroutines
     testImplementation libs.junit
 
     testImplementation libs.mockk
