Handle back stack navigation manually to exit the app when the back button is pressed and the current fragment is the start destination of the current graph.Also observing userSignedIn status and by it decided the tabs startTab

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
     alias(libs.plugins.google.devtools.ksp)
     alias(libs.plugins.com.google.gms)
+
+    alias(libs.plugins.androidx.safeArgs)
 }
 apply from: "$rootDir/core.gradle"
 android {
