--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     dependencies {
         classpath libs.google.services
+        classpath libs.androidx.navigation.safeArgs
     }
 }
 
@@ -15,4 +16,6 @@ plugins {
     alias(libs.plugins.com.google.gms) apply false
     alias(libs.plugins.androidx.room) apply false
     alias(libs.plugins.jetbrains.kotlin.jvm) apply false
+
+    alias(libs.plugins.androidx.safeArgs) apply false
 }
