--- a/data/localeDataSource/src/main/assets/en_default_settings.json
+++ b/data/localeDataSource/src/main/assets/en_default_settings.json
@@ -1,26 +1,31 @@
 {
   "currency": {
     "id": 1,
+    "key": "USD",
     "unit": "USD - Dolar amerykański",
     "abbreviation": "USD"
   },
   "distance": {
     "id": 1,
+    "key": "KM",
     "unit": "Kilometers",
     "abbreviation": "km"
   },
   "capacity": {
     "id": 1,
+    "key": "LITER",
     "unit": "Liters",
     "abbreviation": "l"
   },
   "avg_consumption": {
     "id": 1,
     "key": "L_PER_100KM",
-    "abbreviation": "l/100km"
+    "unit": "l/100km"
   },
   "date_format": {
     "id": 1,
-    "pattern": "dd.MM.yyyy"
+    "key": "DD_MM_YYYY_DOTS",
+    "pattern": "dd.MM.yyyy",
+    "unit": "DD.MM.YYYY"
   }
 }
