--- a/data/localeDataSource/src/main/assets/pl_asset_app_settings.json
+++ b/data/localeDataSource/src/main/assets/pl_asset_app_settings.json
@@ -1,28 +1,28 @@
 {
   "currencies": [
-    { "id": 1, "unit": "USD - Dolar amerykański", "abbreviation": "USD" },
-    { "id": 2, "unit": "EUR - Euro", "abbreviation": "EUR" },
-    { "id": 3, "unit": "JPY - Jen japoński", "abbreviation": "JPY" },
-    { "id": 4, "unit": "GBP - Funt szterling", "abbreviation": "GBP" },
-    { "id": 5, "unit": "AUD - Dolar australijski", "abbreviation": "AUD" },
-    { "id": 6, "unit": "CAD - Dolar kanadyjski", "abbreviation": "CAD" },
-    { "id": 7, "unit": "CHF - Frank szwajcarski", "abbreviation": "CHF" },
-    { "id": 8, "unit": "CNY - Juan chiński", "abbreviation": "CNY" },
-    { "id": 9, "unit": "HKD - Dolar hongkoński", "abbreviation": "HKD" },
-    { "id": 10, "unit": "NOK - Korona norweska", "abbreviation": "NOK" },
-    { "id": 11, "unit": "SEK - Korona szwedzka", "abbreviation": "SEK" },
-    { "id": 12, "unit": "NZD - Dolar nowozelandzki", "abbreviation": "NZD" },
-    { "id": 13, "unit": "PLN - Złoty polski", "abbreviation": "PLN" },
-    { "id": 14, "unit": "INR - Rupia indyjska", "abbreviation": "INR" }
+    { "id": 1, "key": "USD", "unit": "USD – Dolar amerykański", "abbreviation": "USD" },
+    { "id": 2, "key": "EUR", "unit": "EUR – Euro", "abbreviation": "EUR" },
+    { "id": 3, "key": "JPY", "unit": "JPY – Jen japoński", "abbreviation": "JPY" },
+    { "id": 4, "key": "GBP", "unit": "GBP – Funt szterling", "abbreviation": "GBP" },
+    { "id": 5, "key": "AUD", "unit": "AUD – Dolar australijski", "abbreviation": "AUD" },
+    { "id": 6, "key": "CAD", "unit": "CAD – Dolar kanadyjski", "abbreviation": "CAD" },
+    { "id": 7, "key": "CHF", "unit": "CHF – Frank szwajcarski", "abbreviation": "CHF" },
+    { "id": 8, "key": "CNY", "unit": "CNY – Juan chiński", "abbreviation": "CNY" },
+    { "id": 9, "key": "HKD", "unit": "HKD – Dolar hongkoński", "abbreviation": "HKD" },
+    { "id": 10, "key": "NOK", "unit": "NOK – Korona norweska", "abbreviation": "NOK" },
+    { "id": 11, "key": "SEK", "unit": "SEK – Korona szwedzka", "abbreviation": "SEK" },
+    { "id": 12, "key": "NZD", "unit": "NZD – Dolar nowozelandzki", "abbreviation": "NZD" },
+    { "id": 13, "key": "PLN", "unit": "PLN – Polski złoty", "abbreviation": "PLN" },
+    { "id": 14, "key": "INR", "unit": "INR – Rupia indyjska", "abbreviation": "INR" }
   ],
   "distances": [
-    { "id": 1, "unit": "Kilometry", "abbreviation": "km" },
-    { "id": 2, "unit": "Mile", "abbreviation": "mi" }
+    { "id": 1, "key": "KM", "unit": "Kilometry", "abbreviation": "km" },
+    { "id": 2, "key": "MI", "unit": "Mile", "abbreviation": "mi" }
   ],
   "capacities": [
-    { "id": 1, "unit": "Litry", "abbreviation": "l" },
-    { "id": 2, "unit": "Galony (US)", "abbreviation": "gal (US)" },
-    { "id": 3, "unit": "Galony (imp)", "abbreviation": "gal (imp)" }
+    { "id": 1, "key": "LITER", "unit": "Litry", "abbreviation": "l" },
+    { "id": 2, "key": "GALLON_US", "unit": "Galony (USA)", "abbreviation": "gal (US)" },
+    { "id": 3, "key": "GALLON_IMP", "unit": "Galony (UK)", "abbreviation": "gal (imp)" }
   ],
   "avg_consumption": [
     { "id": 1, "key": "L_PER_100KM", "unit": "l/100km" },
@@ -34,14 +34,14 @@
     { "id": 7, "key": "MI_PER_GAL_IMP", "unit": "mi/gal (imp)" }
   ],
   "date_formats": [
-    { "id": 1, "pattern": "dd.MM.yyyy" },
-    { "id": 2, "pattern": "MM.dd.yyyy" },
-    { "id": 3, "pattern": "yyyy.MM.dd" },
-    { "id": 4, "pattern": "dd/MM/yyyy" },
-    { "id": 5, "pattern": "MM/dd/yyyy" },
-    { "id": 6, "pattern": "yyyy/MM/dd" },
-    { "id": 7, "pattern": "dd-MM-yyyy" },
-    { "id": 8, "pattern": "MM-dd-yyyy" },
-    { "id": 9, "pattern": "yyyy-MM-dd" }
+    { "id": 1, "key": "DD_MM_YYYY_DOTS", "pattern": "dd.MM.yyyy", "unit": "DD.MM.RRRR" },
+    { "id": 2, "key": "MM_DD_YYYY_DOTS", "pattern": "MM.dd.yyyy", "unit": "MM.DD.RRRR" },
+    { "id": 3, "key": "YYYY_MM_DD_DOTS", "pattern": "yyyy.MM.dd", "unit": "RRRR.MM.DD" },
+    { "id": 4, "key": "DD_MM_YYYY_SLASH", "pattern": "dd/MM/yyyy", "unit": "DD/MM/RRRR" },
+    { "id": 5, "key": "MM_DD_YYYY_SLASH", "pattern": "MM/dd/yyyy", "unit": "MM/DD/RRRR" },
+    { "id": 6, "key": "YYYY_MM_DD_SLASH", "pattern": "yyyy/MM/dd", "unit": "RRRR/MM/DD" },
+    { "id": 7, "key": "DD_MM_YYYY_DASH", "pattern": "dd-MM-yyyy", "unit": "DD-MM-RRRR" },
+    { "id": 8, "key": "MM_DD_YYYY_DASH", "pattern": "MM-dd-yyyy", "unit": "MM-DD-RRRR" },
+    { "id": 9, "key": "YYYY_MM_DD_DASH", "pattern": "yyyy-MM-dd", "unit": "RRRR-MM-DD" }
   ]
 }
