Removed Singleton annotation from DaoModule. Set java version in domain module to 17

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,9 @@
 plugins{
     alias libs.plugins.jetbrains.kotlin.jvm
 }
+kotlin {
+    jvmToolchain(17)
+}
 dependencies {
     implementation(libs.javax.inject)
     implementation libs.kotlinx.coroutines
